added Mark as Important to LogWebRequest

--- a/InternshipSkeleton/Views/LogMySql/Index.cshtml
+++ b/InternshipSkeleton/Views/LogMySql/Index.cshtml
@@ -246,14 +246,10 @@ else
             },
 
             success: function (result) {
-                currentUserID = null;
-                currentEmailAddress = null;
-                currentTimeStamp = null;
-                currentWebRequestID = null;
+                currentDateTimeStamp = null;
                 currentMessage = null;
-                currentMethodName = null;
-                currentSource = null;
-                currentStackTrace = null;
+                currentFunction = null;
+                currentType = null;
 
                 alert(result);
             },
