pages automatically reload after marking or unmarking as important

--- a/InternshipSkeleton/Views/LogControllerAction/Index.cshtml
+++ b/InternshipSkeleton/Views/LogControllerAction/Index.cshtml
@@ -240,7 +240,7 @@ else
                 currentActionName = null;
                 currentParameters = null;
 
-                alert(result);
+                window.location.reload();
             },
 
             error: function (result) {
@@ -278,7 +278,7 @@ else
                 currentActionName = null;
                 currentParameters = null;
 
-                alert(result);
+                window.location.reload();
             },
 
             error: function (result) {
