--- a/InternshipSkeleton/Views/LogException/Index.cshtml
+++ b/InternshipSkeleton/Views/LogException/Index.cshtml
@@ -240,7 +240,9 @@ else
                 currentSource = null;
                 currentStackTrace = null;
 
-                alert(result);
+                window.location.reload();
+
+                //alert(result);
             },
 
             error: function (result) {
@@ -280,7 +282,9 @@ else
                 currentSource = null;
                 currentStackTrace = null;
 
-                alert(result);
+                //alert(result);
+                window.location.reload();
+
             },
 
             error: function (result) {
