--- a/InternshipSkeleton/Views/LogInfo/Index.cshtml
+++ b/InternshipSkeleton/Views/LogInfo/Index.cshtml
@@ -241,7 +241,7 @@ else
                 currentMethodName = null;
                 currentObject = null;
 
-                alert(result);
+                window.location.reload();
             },
 
             error: function (result) {
@@ -279,7 +279,7 @@ else
                 currentMethodName = null;
                 currentObject = null;
 
-                alert(result);
+                window.location.reload();
             },
 
             error: function (result) {
