--- a/InternshipSkeleton/Views/LogInfo/Index.cshtml
+++ b/InternshipSkeleton/Views/LogInfo/Index.cshtml
@@ -241,11 +241,16 @@ else
                 currentMethodName = null;
                 currentObject = null;
 
-                window.location.reload();
+                if (result.IsCreated) {
+                    window.location.reload();
+                }
+                else {
+                    alert(result.ErrorMessage);
+                }
             },
 
             error: function (result) {
-                alert(result);
+                alert(result.ErrorMessage);
             }
         });
     };
@@ -279,11 +284,16 @@ else
                 currentMethodName = null;
                 currentObject = null;
 
-                window.location.reload();
+                if (result.IsCreated) {
+                    window.location.reload();
+                }
+                else {
+                    alert(result.ErrorMessage);
+                }
             },
 
             error: function (result) {
-                alert(result);
+                alert(result.ErrorMessage);
             }
         });
     }
