--- a/InternshipSkeleton/Views/LogControllerAction/Index.cshtml
+++ b/InternshipSkeleton/Views/LogControllerAction/Index.cshtml
@@ -38,20 +38,20 @@
 {
     <div class="container" style="padding-top: 50px !important;">
         <div class="block" style="width: 25% !important; display: inline-block;">
-            @Html.Label("Sort by: ", new { @class = "mydropdown" })
+            @Html.Label("Sort by: ", new { @class = "mylabel" })
             @Html.DropDownList("sortBy", listItems, new { @class = "mydropdown" })
         </div>
         <div class="block" style="width: 25% !important; display: inline-block; ">
-            @Html.Label("Search by: ", new { @class = "mydropdown" })
+            @Html.Label("Search by: ", new { @class = "mylabel" })
             @Html.DropDownList("searchBy", searchCategories, new { @class = "mydropdown" })
         </div>
         <div class="block" style="width: 25% !important; display: inline-block; ">
-            @Html.Label("*Search for: ", new { @class = "mydropdown" })
-            @Html.TextBox("searchInput", null, new { @class = "mydropdown" })
+            @Html.Label("*Search for: ", new { @class = "mylabel" })
+            @Html.TextBox("searchInput", null, new { @class = "mytextbox" })
         </div>
         <div class="block" style="width: 25% !important; display: inline-block; ">
-            @Html.Label("Page: ", new { @class = "mydropdown" })
-            @Html.TextBox("id", null, new { @class = "mydropdown" })
+            @Html.Label("Page: ", new { @class = "mylabel" })
+            @Html.TextBox("id", null, new { @class = "mytextbox" })
         </div>
         <input type="submit" name="btnSubmit" value="Go" class="btn btn-default" style="width: 20% !important; display: inline-block;" />
     </div>
